重构EasyQC项目：添加专业README、完善安装脚本和项目结构
- 创建专业的README.md文档，包含完整的安装和使用说明
- 重写setup.sh脚本，简化安装流程，支持.env虚拟环境
- 完善.gitignore文件，添加Python项目标准忽略规则
- 重构项目结构，模块化代码组织
- 添加缺失的pandasql依赖
- 优化启动脚本和错误处理

--- a/projects.json
+++ b/projects.json
@@ -1,4 +1,6 @@
 {
-    "projects": {},
-    "last_project": ""
+    "projects": {
+        "ccnp": "/Users/luochongjing/Projects/easyqc_ccnp"
+    },
+    "last_project": "ccnp"
 }
