--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,45 @@
-# 忽略 start.sh 文件
-start.sh
+# Python 虚拟环境
+.venv/
+.env/
+venv/
+env/
 
-# 忽略以 VENV 开头的目录及其内容
-VENV*/
-ccsqcenv/
+# Python 缓存文件
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
 
-# 忽略特定的文件
-settings_default.json
-projects_default.json
-regions_old.json
+# 日志文件
+*.log
+logs/
+
+# 临时文件
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
+
+# IDE 文件
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 项目特定文件
+projects.json
+*.json.bak
+
+# 数据文件（根据实际情况调整）
+data/
+output/
+temp/
+
+# 系统文件
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
