--- a/.gitignore
+++ b/.gitignore
@@ -29,17 +29,18 @@ Thumbs.db
 # 项目特定文件
 projects.json
 *.json.bak
+settings.json
+settings*.json
 
-# 数据文件（根据实际情况调整）
-data/
-output/
-temp/
+# 自动生成的脚本
+start.sh
 
-# 系统文件
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# 数据文件（如果包含敏感数据）
+DataAndTable/
+RatingFiles/
+Table/
+
+# 测试和临时文件
+test_*.py
+*_test.py
+debug_*.py
